fix(client): Fix small container width on mobile

--- a/src/client/scss/_reboot.scss
+++ b/src/client/scss/_reboot.scss
@@ -59,3 +59,7 @@ div[itemtype] {
     color: nth($warning, 1);
   }
 }
+
+.container {
+  width: 100%;
+}
